@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.62 2002/11/25 16:57:17 ukai Exp $ */
+/* $Id: proto.h,v 1.63 2002/11/26 17:05:25 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -181,6 +181,7 @@ extern Str process_n_textarea(void);
 extern void feed_textarea(char *str);
 extern Str process_form(struct parsed_tag *tag);
 extern Str process_n_form(void);
+extern int getMetaRefreshParam(char *q, Str *refresh_uri);
 extern int HTMLtagproc1(struct parsed_tag *tag,
 			struct html_feed_environ *h_env);
 extern void HTMLlineproc2(Buffer *buf, TextLineList *tl);
